--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="container-fluid">
           <div class="row g-0">
             <div class="col-md-4">
-              <p class="fs-6 my-2 text-center">Need any help? Call us <a href="#">+122 345 6789</a></p>
+              <p class="fs-6 my-2 text-center">Need any help? Call us <a href="#">+1-833-770-3301</a></p>
             </div>
             <div class="col-md-4 border-start border-end">
               <p class="fs-6 my-2 text-center">Summer sale discount off 60% off! <a class="text-decoration-underline"
@@ -1695,7 +1695,7 @@
                   <h5 class="widget-title text-capitalize pb-2">Contact Us</h5>
                   <p>Do you have any queries or suggestions? <a href="mailto:"
                       class="text-decoration-underline">yourinfo@gmail.com</a></p>
-                  <p>If you need support? Just give us a call. <a href="#" class="text-decoration-underline">+122 345 6789</a></p>
+                  <p>If you need support? Just give us a call. <a href="#" class="text-decoration-underline">+1-833-770-3301</a></p>
                 </div>
               </div>
             </div>
@@ -1740,4 +1740,5 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
+
 </html>
